added Fog Block

--- a/src/main/resources/assets/extraordinaryblocks/lang/en_us.json
+++ b/src/main/resources/assets/extraordinaryblocks/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "block.extraordinaryblocks.black_block": "Black Block"
+  "block.extraordinaryblocks.black_block": "Black Block",
+  "block.extraordinaryblocks.fog_block": "Fog Block"
 }
